Добавил в nodeeditor новые функции для реализации drcRulesWidget. Будет исправлено позже.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,22 +138,25 @@ set(HPP_HEADER_FILES
 
 # If we want to give the option to build a static library,
 # set BUILD_SHARED_LIBS option to OFF
-add_library(QtNodes
+add_library(QtNodes SHARED
   ${CPP_SOURCE_FILES}
   ${HPP_HEADER_FILES}
   ${RESOURCES}
+  ../common/fcpdrc/cesgrouprecord.cpp
 )
 
 add_library(QtNodes::QtNodes ALIAS QtNodes)
-
 
 target_include_directories(QtNodes
   PUBLIC
     $<INSTALL_INTERFACE:include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../common>
+
   PRIVATE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/QtNodes/internal>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../common>
 )
 
 target_link_libraries(QtNodes
@@ -166,7 +169,7 @@ target_link_libraries(QtNodes
 
 target_compile_definitions(QtNodes
   PUBLIC
-    $<IF:$<BOOL:${BUILD_SHARED_LIBS}>, NODE_EDITOR_SHARED, NODE_EDITOR_STATIC>
+    NODE_EDITOR_SHARED
   PRIVATE
     NODE_EDITOR_EXPORTS
     #NODE_DEBUG_DRAWING
@@ -198,7 +201,7 @@ set_target_properties(QtNodes
   PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
 )
 
 ######
